tests/_tests/errors/type-2.cl
(* Type mismatch errors *)

class Main {
	value : Int <- 0;
	
	main() : Object {
		let value : String, x : Int in value + x
	};
};